fix(home): spacing

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -9,6 +9,4 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 48px;
-
 }
