--- a/src/components/FindUs/FindUs.module.scss
+++ b/src/components/FindUs/FindUs.module.scss
@@ -8,9 +8,10 @@
     width: 100%;
     align-items: center;
     flex-direction: column;
+    padding: 72px 48px;
     @include desktop{
         max-width: 1400px;
-        padding: 24px 72px;
+        padding:  72px;
     }
     gap: 48px;
 }
@@ -22,10 +23,17 @@
 
 .infoContainer{
     display: flex;
+    flex-direction: column;
+
+    @include desktop{
+        flex-direction: row;
+        gap: 72px;
+        justify-content: center;
+    }
     gap: 48px;
     width: 100%;
     align-items: center;
-    justify-content: space-around;
+
 }
 
 .infoContent{
@@ -54,6 +62,12 @@
     display: flex;
     gap: 24px;
     flex-direction: column;
+}
+
+.map{
+    width: 100%;
+    min-height: 350px;
+    max-width: 450px;
 }
 
 .info{
