--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -10,10 +10,10 @@
     border-bottom: 1px  solid gray;
     padding: 24px 72px;
     justify-content: space-between; 
+    max-width: 1400px;
     @include desktop{
-      max-width: 1400px;
+        max-width: 1400px;
     }
-
 }
 
 .container{
@@ -24,7 +24,7 @@
     justify-content: space-between;
     background-color: $background-color;
     align-items: center;
-
+    
     padding: 0 72px 24px  72px;
 
 }
