--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -25,7 +25,7 @@
     @include desktop{
         flex-direction: row;
         max-width: 1400px;
-        padding: 0 72px 48px 72px;
+        padding: 64px 72px;
         align-items: center;
         justify-content: space-between;
     }
