--- a/src/components/ServicesSection/ServicesSection.module.scss
+++ b/src/components/ServicesSection/ServicesSection.module.scss
@@ -15,11 +15,6 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    padding: 48px 16px;
-    @include desktop{
-        padding: 48px 72px;
-
-    }
 
 }
 
@@ -27,7 +22,7 @@
 
     @include desktop{
         max-width: 1400px;
-        padding: 0 48px;
+        padding:  72px;
 
     }
     width: 100%;
@@ -43,7 +38,6 @@
 }
 
 .titleSection{
-    padding-top: 64px;
     width: 100%;
     display: flex; 
     flex-direction: column;
