--- a/src/components/ValueCard/ValueCard.module.scss
+++ b/src/components/ValueCard/ValueCard.module.scss
@@ -5,12 +5,12 @@
 .container{
     display: flex;
     flex-direction: column;
-    max-width: 400px;
     gap: 16px;
     background-color:  $card-background-secondary;
-    padding: 16px;
+    padding: 32px;
     border-radius: 8px;
     min-height: 175px;
+    max-width: 425px;
 }
 
 .headerCard{
